--- a/themes/jacobmilligan/src/scss/pages/_home.scss
+++ b/themes/jacobmilligan/src/scss/pages/_home.scss
@@ -10,7 +10,7 @@
 #heroTitle {
     margin: 0 auto;
     max-width: 600px;
-    overflow: auto;
+    overflow: hidden;
     text-transform: uppercase;
 
     h1 {
